--- a/src/MultiAlignRogue/packages.config
+++ b/src/MultiAlignRogue/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AvalonDock" version="2.0.2000" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="Extended.Wpf.Toolkit" version="2.5" targetFramework="net45" />
   <package id="MvvmLight" version="5.1.1.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net45" />
   <package id="Ookii.Dialogs" version="1.0" targetFramework="net45" />
