--- a/src/Test/AlignmentPaperTestSuite/AlignmentPaperTestSuite/AlignmentPaperTestSuite.csproj
+++ b/src/Test/AlignmentPaperTestSuite/AlignmentPaperTestSuite/AlignmentPaperTestSuite.csproj
@@ -55,7 +55,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mage">
-      <HintPath>..\..\..\..\lib\$(Platform)\Mage.dll</HintPath>
+      <HintPath>..\..\..\..\lib\Mage\Mage.dll</HintPath>
     </Reference>
     <Reference Include="MTDBFramework, Version=1.0.5655.19433, Culture=neutral, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
