Cleanup - remove MultiAlignEngine references where possible - remove some unused source files - Clean up some paths

--- a/src/Test/MultiAlignTestSuite/MultiAlignTestSuite.csproj
+++ b/src/Test/MultiAlignTestSuite/MultiAlignTestSuite.csproj
@@ -189,7 +189,7 @@
       <Project>{bdfa22c4-5822-4aa5-996e-6fde57f7118b}</Project>
       <Name>MultiAlignCore</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TestCore\TestCore\TestCore.csproj">
+    <ProjectReference Include="..\TestCore\TestCore.csproj">
       <Project>{2b216610-b41c-4b55-9efa-6aac8cd91e32}</Project>
       <Name>TestCore</Name>
     </ProjectReference>
