--- a/src/Test/AlignmentPaperTestSuite/AlignmentPaperTestSuite.csproj
+++ b/src/Test/AlignmentPaperTestSuite/AlignmentPaperTestSuite.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2B216610-B41C-4B55-9EFA-6AAC8CD91E32}</ProjectGuid>
+    <ProjectGuid>{9ACDB6EB-377D-4249-9E8A-9E73CBB5EC26}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TestCore</RootNamespace>
-    <AssemblyName>TestCore</AssemblyName>
+    <RootNamespace>AlignmentPaperTestSuite</RootNamespace>
+    <AssemblyName>AlignmentPaperTestSuite</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
@@ -20,6 +21,7 @@
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\Release\</OutputPath>
@@ -29,6 +31,7 @@
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -38,6 +41,7 @@
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <OutputPath>bin\x86\Release\</OutputPath>
@@ -47,21 +51,39 @@
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MultiAlignEngine">
-      <HintPath>..\..\..\..\lib\$(Platform)\MultiAlignEngine.dll</HintPath>
+    <Reference Include="Mage">
+      <HintPath>..\..\..\lib\Mage\Mage.dll</HintPath>
+    </Reference>
+    <Reference Include="MTDBFramework, Version=1.0.5655.19433, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\lib\MTDBFramework\MTDBFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="OxyPlot.Wpf, Version=2014.1.546.0, Culture=neutral, PublicKeyToken=75e952ba404cdbb0, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\OxyPlot.Wpf.2014.1.546\lib\net45\OxyPlot.Wpf.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="OxyPlot.Xps, Version=2014.1.546.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\OxyPlot.Wpf.2014.1.546\lib\net45\OxyPlot.Xps.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="PNNLOmics, Version=1.1.5385.41078, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\lib\PNNLOmics.dll</HintPath>
+      <HintPath>..\..\..\lib\PNNLOmics.dll</HintPath>
     </Reference>
     <Reference Include="PNNLOmicsIO, Version=1.1.5385.36913, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\lib\PNNLOmicsIO.dll</HintPath>
+      <HintPath>..\..\..\lib\PNNLOmicsIO.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -69,18 +91,50 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Figures\Figure1.cs" />
+    <Compile Include="Figures\Figure2.cs" />
+    <Compile Include="Figures\Figure3.cs" />
+    <Compile Include="Figures\Figure4.cs" />
+    <Compile Include="Figures\Figure5.cs" />
+    <Compile Include="Generators\DatabaseGenerators.cs" />
+    <Compile Include="Figures\FigureGenerator.cs" />
+    <Compile Include="IO\AlignmentAnalysisWriterFactory.cs" />
+    <Compile Include="IO\AlignmentFigureType.cs" />
+    <Compile Include="IO\PaperFileWriter.cs" />
+    <Compile Include="IO\RawLoaderCache.cs" />
+    <Compile Include="IO\ReportFileUtility.cs" />
+    <Compile Include="IO\ScanSummaryCache.cs" />
+    <Compile Include="IO\SpectralWriterFigureOne.cs" />
+    <Compile Include="IO\SpectralWriterFigureThree.cs" />
+    <Compile Include="IO\SpectralWriterFigureTwo.cs" />
+    <Compile Include="Loess.cs" />
+    <Compile Include="MatchCountHistogramBuilder.cs" />
+    <Compile Include="PeptideMatch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestBase.cs" />
-    <Compile Include="TestPathSingleton.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\Library\MultiAlignCore\MultiAlignCore.csproj">
-      <Project>{bdfa22c4-5822-4aa5-996e-6fde57f7118b}</Project>
-      <Name>MultiAlignCore</Name>
-    </ProjectReference>
+    <Compile Include="SpectralCacheUtility.cs" />
+    <Compile Include="SSM\BaseSpectralAlignmentTest.cs" />
+    <Compile Include="SSM\TestSpectralLinking.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Applications\MultiAlign\MultiAlign.csproj">
+      <Project>{6EC23CCC-4F36-47BF-B997-F0A5727822A5}</Project>
+      <Name>MultiAlign</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Library\MultiAlignCore\MultiAlignCore.csproj">
+      <Project>{bdfa22c4-5822-4aa5-996e-6fde57f7118b}</Project>
+      <Name>MultiAlignCore</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TestCore\TestCore.csproj">
+      <Project>{2b216610-b41c-4b55-9efa-6aac8cd91e32}</Project>
+      <Name>TestCore</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
