--- a/src/Test/MultiAlignTestSuite/MultiAlignTestSuite.csproj
+++ b/src/Test/MultiAlignTestSuite/MultiAlignTestSuite.csproj
@@ -132,46 +132,46 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Algorithms\Alignment\LCMSWarp\LCMSWarpTest.cs" />
-    <Compile Include="Algorithms\CallisterClusters\CompareClusters.cs" />
+    <Compile Include="Algorithms\Alignment\LCMSWarp\LcmsWarpTests.cs" />
+    <Compile Include="Algorithms\CallisterClusters\ClusterComparer.cs" />
     <Compile Include="Algorithms\FeatureFinding\FeatureFindingTest.cs" />
-    <Compile Include="Algorithms\MsMsClustering.cs" />
     <Compile Include="Algorithms\SpectralProcessing\SpectralAlignmentTests.cs" />
     <Compile Include="Algorithms\SpectralProcessing\SpectralComparisonTests.cs" />
+    <Compile Include="Algorithms\MsMsClusterTests.cs" />
+    <Compile Include="Algorithms\UMCClustering.cs" />
     <Compile Include="Algorithms\UMCTreeFeatureFinding.cs" />
     <Compile Include="Drawing\HeatmapTest.cs" />
     <Compile Include="Drawing\ScatterPlotTest.cs" />
-    <Compile Include="IO\Databases\LocalDatabaseTests.cs" />
+    <Compile Include="IO\DAO\DataProviderTests.cs" />
+    <Compile Include="IO\DAO\MassTagDOATest.cs" />
+    <Compile Include="IO\DAO\MSFeatureDOATest.cs" />
+    <Compile Include="IO\DAO\NHibernateFeatureTests.cs" />
+    <Compile Include="IO\Databases\DatabaseIoTests.cs" />
+    <Compile Include="IO\Databases\MtdbLoaderTests.cs" />
+    <Compile Include="IO\Databases\MtsLoaderTests.cs" />
+    <Compile Include="IO\UMCClusterIO.cs" />
+    <Compile Include="IO\UMCClusterReconstruction.cs" />
+    <Compile Include="IO\UMCFeatureDOATest.cs" />
+    <Compile Include="IO\UMCReaderFailure.cs" />
     <Compile Include="IO\Utilities.cs" />
-    <Compile Include="Papers\Alignment\ClusterIdentificationStatistic.cs" />
-    <Compile Include="Papers\Alignment\ClusterValidationTests.cs" />
+    <Compile Include="OHSU\ClusterExtractor.cs" />
+    <Compile Include="OHSU\LargeScaleClusterTests.cs" />
     <Compile Include="Papers\Alignment\IO\AlignmentAnalysisWriterFactory.cs" />
     <Compile Include="Papers\Alignment\IO\AlignmentFigureType.cs" />
     <Compile Include="Papers\Alignment\IO\PaperFileWriter.cs" />
     <Compile Include="Papers\Alignment\IO\RawLoaderCache.cs" />
     <Compile Include="Papers\Alignment\IO\ReportFileUtility.cs" />
     <Compile Include="Papers\Alignment\IO\ScanSummaryCache.cs" />
+    <Compile Include="Papers\Alignment\IO\SpectralWriterFigureOne.cs" />
     <Compile Include="Papers\Alignment\IO\SpectralWriterFigureThree.cs" />
     <Compile Include="Papers\Alignment\IO\SpectralWriterFigureTwo.cs" />
-    <Compile Include="Papers\Alignment\IO\SpectralWriterFigureOne.cs" />
-    <Compile Include="Papers\Alignment\MatchCountHistogramBuilder.cs" />
-    <Compile Include="Papers\Alignment\SpectralCacheUtility.cs" />
     <Compile Include="Papers\Alignment\SSM\BaseSpectralAlignmentTest.cs" />
     <Compile Include="Papers\Alignment\SSM\TestSpectralLinking.cs" />
-    <Compile Include="Algorithms\UMCClustering.cs" />
-    <Compile Include="IO\Databases\DatabaseIoTests.cs" />
-    <Compile Include="IO\UMCClusterIO.cs" />
-    <Compile Include="IO\UMCFeatureDOATest.cs" />
-    <Compile Include="IO\DAO\MSFeatureDOATest.cs" />
-    <Compile Include="IO\DAO\MassTagDOATest.cs" />
-    <Compile Include="IO\DAO\NHibernateFeatureTests.cs" />
-    <Compile Include="IO\Databases\MtsFrameworkTests.cs" />
-    <Compile Include="IO\UMCReaderFailure.cs" />
-    <Compile Include="IO\DAO\DataProviderTests.cs" />
-    <Compile Include="IO\UMCClusterReconstruction.cs" />
-    <Compile Include="OHSU\ExtractClusters.cs" />
-    <Compile Include="OHSU\LargeScaleClusterTests.cs" />
+    <Compile Include="Papers\Alignment\ClusterIdentificationStatistic.cs" />
+    <Compile Include="Papers\Alignment\ClusterValidationTests.cs" />
     <Compile Include="Papers\Alignment\FigureGenerator.cs" />
+    <Compile Include="Papers\Alignment\MatchCountHistogramBuilder.cs" />
+    <Compile Include="Papers\Alignment\SpectralCacheUtilityTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
