--- a/src/GridApps/MultiAlignChargeStateProcessor/MultiAlignChargeStateProcessor.csproj
+++ b/src/GridApps/MultiAlignChargeStateProcessor/MultiAlignChargeStateProcessor.csproj
@@ -64,6 +64,10 @@
     <Reference Include="GalaSoft.MvvmLight">
       <HintPath>..\..\packages\MvvmLightLibs.5.1.1.0\lib\net45\GalaSoft.MvvmLight.dll</HintPath>
     </Reference>
+    <Reference Include="InformedProteomics.Backend, Version=1.0.5704.28758, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\lib\InformedProteomics.Backend\InformedProteomics.Backend.dll</HintPath>
+    </Reference>
     <Reference Include="PNNLOmics, Version=1.1.5385.41078, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\lib\PNNLOmics.dll</HintPath>
