Adding new user control for feature finding settings with "Advanced Options" for selecting clusterers and XIC settings.

--- a/src/MultiAlignRogue/MultiAlignRogue.csproj
+++ b/src/MultiAlignRogue/MultiAlignRogue.csproj
@@ -115,6 +115,7 @@
     </Reference>
     <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\MvvmLightLibs.5.1.1.0\lib\net45\System.Windows.Interactivity.dll</HintPath>
       <Private>True</Private>
@@ -189,6 +190,9 @@
       <DependentUpon>DmsLookupView.xaml</DependentUpon>
     </Compile>
     <Compile Include="DMS\DmsLookupViewModel.cs" />
+    <Compile Include="Feature Finding\FeatureFindingSettings.xaml.cs">
+      <DependentUpon>FeatureFindingSettings.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Feature Finding\FeatureFindingSettingsViewModel.cs" />
     <Compile Include="Feature Finding\FeaturePoint.cs" />
     <Compile Include="Feature Finding\IFeatureWindowFactory.cs" />
@@ -228,6 +232,10 @@
     <Page Include="DMS\DmsLookupView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Feature Finding\FeatureFindingSettings.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
