Adding Promex clusterer and Promex file reader (adapters for LcMsFeatureAlignment in InformedProteomics)

--- a/src/Test/MultiAlignTestSuite/MultiAlignTestSuite.csproj
+++ b/src/Test/MultiAlignTestSuite/MultiAlignTestSuite.csproj
@@ -181,6 +181,7 @@
     <Compile Include="IO\Databases\DatabaseIoTests.cs" />
     <Compile Include="IO\Databases\MtdbLoaderTests.cs" />
     <Compile Include="IO\Databases\MtsLoaderTests.cs" />
+    <Compile Include="IO\PromexFileReading.cs" />
     <Compile Include="IO\UMCClusterIO.cs" />
     <Compile Include="IO\UMCClusterReconstruction.cs" />
     <Compile Include="IO\UMCFeatureDOATest.cs" />
