--- a/src/MultiAlignRogue/MultiAlignRogue.csproj
+++ b/src/MultiAlignRogue/MultiAlignRogue.csproj
@@ -213,6 +213,7 @@
     <Compile Include="Feature Finding\MSFeatureViewFactory.cs" />
     <Compile Include="Feature Finding\MSFeatureViewModel.cs" />
     <Compile Include="Utils\PlotViewModelBase.cs" />
+    <Compile Include="Utils\TaskBarProgressSingleton.cs" />
     <Compile Include="Utils\Throttler.cs" />
     <Compile Include="ViewModels\ChargeStateViewModel.cs" />
     <Compile Include="ViewModels\DatasetInformationViewModel.cs" />
